[gd_scene load_steps=15 format=3 uid="uid://cymnksgc7f2fp"]

[ext_resource type="Texture2D" uid="uid://f24lb4cp0pqm" path="res://07-Violence/Art Assets/background.png" id="1_66xsg"]
[ext_resource type="Script" path="res://07-Violence/Levels/second_battle.gd" id="1_hkk3m"]
[ext_resource type="Texture2D" uid="uid://xmh8oucec5d5" path="res://07-Violence/Art Assets/floor.png" id="2_fnrjg"]
[ext_resource type="Texture2D" uid="uid://uauox0x6i4ux" path="res://07-Violence/Art Assets/buildings.png" id="3_ply7l"]
[ext_resource type="Texture2D" uid="uid://ipokeoq7skfp" path="res://07-Violence/Art Assets/chains.png" id="4_2033d"]
[ext_resource type="Texture2D" uid="uid://n46a7b84ska5" path="res://07-Violence/Art Assets/fire demon front.png" id="5_kpqdm"]
[ext_resource type="Texture2D" uid="uid://ct068vlsisb34" path="res://07-Violence/Art Assets/pointer.png" id="6_ny88n"]
[ext_resource type="Texture2D" uid="uid://btqd8ot75v1dj" path="res://07-Violence/Art Assets/violence_mc_WithWeapon.png" id="8_750qv"]

[sub_resource type="Animation" id="Animation_1v2u4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Fire Demon:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_26783"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Fire Demon:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(30, 30, 30, 1), Color(30, 30, 30, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kshdw"]
_data = {
"RESET": SubResource("Animation_1v2u4"),
"hurt": SubResource("Animation_26783")
}

[sub_resource type="Animation" id="Animation_rmoo4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("W Damien:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bujc6"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("W Damien:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(30, 30, 30, 1), Color(30, 30, 30, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c5w0b"]
_data = {
"RESET": SubResource("Animation_rmoo4"),
"hurt": SubResource("Animation_bujc6")
}

[node name="second_battle" type="Node2D"]
script = ExtResource("1_hkk3m")

[node name="Sky" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_66xsg")
expand_mode = 3

[node name="Floor" type="TextureRect" parent="."]
offset_left = -2.0
offset_top = 347.0
offset_right = 1158.0
offset_bottom = 651.0
texture = ExtResource("2_fnrjg")
expand_mode = 5

[node name="Buildings" type="TextureRect" parent="."]
offset_right = 1154.0
offset_bottom = 647.0
texture = ExtResource("3_ply7l")
expand_mode = 2

[node name="Chains" type="TextureRect" parent="."]
offset_left = 135.0
offset_right = 1129.0
offset_bottom = 264.0
texture = ExtResource("4_2033d")
expand_mode = 1

[node name="Demon" type="VBoxContainer" parent="."]
offset_left = 300.0
offset_top = 100.0
offset_right = 512.0
offset_bottom = 419.0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Health Bar" type="ProgressBar" parent="Demon"]
layout_mode = 2

[node name="Fire Demon" type="TextureRect" parent="Demon"]
layout_mode = 2
texture = ExtResource("5_kpqdm")

[node name="Pointer" type="Sprite2D" parent="Demon"]
visible = false
position = Vector2(-75, 193)
rotation = -1.5708
scale = Vector2(3, 3)
texture = ExtResource("6_ny88n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Demon"]
root_node = NodePath("../Pointer")
libraries = {
"": SubResource("AnimationLibrary_kshdw")
}

[node name="Damien" type="VBoxContainer" parent="."]
offset_left = 695.0
offset_top = 459.0
offset_right = 813.0
offset_bottom = 562.0

[node name="Health Bar" type="ProgressBar" parent="Damien"]
layout_mode = 2

[node name="Marker" type="Sprite2D" parent="Damien"]
visible = false
position = Vector2(-47, 94)
rotation = 4.71239
scale = Vector2(2, 1.842)
texture = ExtResource("6_ny88n")

[node name="W Damien" type="Sprite2D" parent="Damien"]
position = Vector2(-7, 38)
scale = Vector2(3.17647, 3.15625)
texture = ExtResource("8_750qv")
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Damien"]
libraries = {
"": SubResource("AnimationLibrary_c5w0b")
}

[node name="Choice" type="VBoxContainer" parent="."]
offset_left = 936.0
offset_top = 515.0
offset_right = 1001.0
offset_bottom = 581.0
scale = Vector2(1.47661, 1.59359)

[node name="Attack" type="Button" parent="Choice"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Attack"

[node name="Defend" type="Button" parent="Choice"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
text = "Defend"

[node name="Button" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 508.0
offset_top = 280.0
offset_right = 593.0
offset_bottom = 311.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.03419, 1.97268)
text = "Proceed..."

[connection signal="pressed" from="Choice/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="Choice/Defend" to="." method="_on_defend_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
